AC_INIT([amVulkanExample], [0.1])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CXX
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 chap02/Makefile
 chap03/Makefile
 chap04/Makefile
 chap05/Makefile
 chap06/Makefile
 chap07/Makefile
 chap08/Makefile
 chap09/Makefile
 chap10/Makefile
])
AC_OUTPUT
